--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ flutter:
     - images/banner/
     - images/products/
     - images/featuredproducts/
+    - images/category/
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
