--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   smooth_page_indicator: ^1.1.0
+  animated_splash_screen: ^1.3.0
+  get:
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +68,7 @@ flutter:
     - images/products/
     - images/featuredproducts/
     - images/category/
+    - images/splash/
 
   #   - images/a_dot_ham.jpeg
 
