--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   smooth_page_indicator: ^1.1.0
   animated_splash_screen: ^1.3.0
-  get:
+  page_transition: ^2.0.9
 
 dev_dependencies:
   flutter_test:
