--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   animated_splash_screen: ^1.3.0
   page_transition: ^2.0.9
+  auto_size_text: ^3.0.0
+  font_awesome_flutter: ^10.5.0
 
 dev_dependencies:
   flutter_test:
