--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   page_transition: ^2.0.9
   auto_size_text: ^3.0.0
   font_awesome_flutter: ^10.5.0
+  http: ^1.1.0
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
