--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   font_awesome_flutter: ^10.5.0
   http: ^1.1.0
   shared_preferences: ^2.2.0
+  carousel_slider: ^4.2.1
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
