--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   shared_preferences: ^2.2.0
   carousel_slider: ^4.2.1
   shimmer: ^3.0.0
+  provider: ^6.0.5
+  get_it: ^7.6.0
+  locator: ^0.0.0-dev.2
 
 dev_dependencies:
   flutter_test:
