--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   provider: ^6.0.5
   get_it: ^7.6.0
   locator: ^0.0.0-dev.2
+  flutter_advanced_drawer: ^1.3.5
+
 
 dev_dependencies:
   flutter_test:
