--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,10 @@ dependencies:
   get_it: ^7.6.0
   locator: ^0.0.0-dev.2
   flutter_advanced_drawer: ^1.3.5
+  path_provider: ^2.0.2
+  sqflite: ^2.0.0+4
+  badges: ^3.1.1
+  path:
 
 
 dev_dependencies:
