--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,10 @@ dependencies:
   sqflite: ^2.0.0+4
   badges: ^3.1.1
   path:
+  firebase_core:
+  firebase_messaging:
+  firebase_auth: ^4.6.3
+  google_sign_in: ^6.1.4
 
 
 dev_dependencies:
