--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,9 @@ dependencies:
   hive:
   hive_flutter:
   fluttertoast: ^8.2.2
+  connectivity_plus: ^4.0.1
+  get: ^4.6.5
+  flutter_launcher_icons: ^0.13.1
 
 
 
@@ -68,6 +71,12 @@ dev_dependencies:
     sdk: flutter
   hive_generator: ^2.0.0
   build_runner: ^2.3.2
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "images/shopping-cart.png"
+  min_sdk_android: 21
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
